<?xml version="1.0" encoding="utf-8"?>
<!--
  SoundBox - Android Music Player
  Copyright (C) 2013 Iván Arcuschin Moreno

  This file is part of SoundBox.

  SoundBox is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  SoundBox is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with SoundBox.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">SoundBox</string>
    <string name="TitleActivityFolders">FoldersActivity</string>
    <string name="TitleActivitySongsList">Current playlist</string>
    <string name="LabelPlayFolder">Play folder</string>
    <string name="LabelAbout">About</string>
    <string name="LabelAboutSoundbox">About SoundBox</string>
    <string name="LabelAboutVersion">Version</string>
    <string name="LabelAboutLicense">License</string>
    <string name="LabelAboutAuthor">Author</string>
    <string name="LabelAboutSelf">Iván Arcuschin</string>
    <string name="ErrorFetchingVersion">Error fetching SoundBox version</string>
    <string name="LabelPlaySongsRandom">Play all songs random</string>
    <string name="LabelGitHub">Code on GitHub</string>
    <string name="TabArtists">ARTISTS</string>
    <string name="TabSongs">SONGS</string>
    <string name="TabPlaylists">PLAYLISTS</string>
    <string name="LabelArtistAlbum">%1$s - %2$s</string>
</resources>